--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <title>Заказ Дед Мороза на Новый год</title>
 </head>
 <body>
+  <div class="page">
   <header class="page-header">
     <div class="content-wrapper">
       <a class="logo">
-        <img src="img/logo.png" width="150" height="150" alt="Логотип с надписью Мороз'OK">
+        <img src="img/OK.png" width="84" height="75" alt="Логотип с надписью Мороз'OK">
       </a>
       <nav class="header-nav">
         <ul class="nav-list">
@@ -20,12 +21,24 @@
           <li class="nav-item"><a href="#program" class="nav-link">Программа поздравления</a></li>
           <li class="nav-item"><a href="#how-work" class="nav-link">Как мы работаем</a></li>
           <li class="nav-item"><a href="#price" class="nav-link">Цены</a></li>
-          <li class="nav-item"><a href="#photo" class="nav-link">Фото</a></li>
+          <!--<li class="nav-item"><a href="#photo" class="nav-link">Фото</a></li>!-->
           <li class="nav-item"><a href="#reviews" class="nav-link">Отзывы</a></li>
         </ul>
       </nav>
     </div>
-    <img src="img/header.jpg" width="1600" height="888" alt="Вид новогоднего города Пермь" class="main-poster">
+    <img src="img/header-bg4.jpg" width="1440" height="581" alt="Вид новогоднего города Пермь" class="main-poster">
+    <div class="position-wrap">
+      <div class="title-wrap">
+        <p class="header-tel">252-22-00</p>
+        <p class="header-tel">+7(912)-78-071-43</p>
+        <p class="header-top">Новогоднее игровое представление</p>  
+        <h1 class="header_title">Дед мороз и Снегурочка</h1>
+        <p class="header-top">с визитом на дом в Перми</p>
+        <a href="#" class="button-form">заказать представление</a>
+        <p class="header-bottom"><b>Запишитесь заранее</b> на удобное время - успейте подарить вашему ребенку праздник!</p>  
+      </div>
+    </div>
+    <img src="img/santa_claus_PNG9961.png" width="800" height="532" alt="Вид новогоднего города Пермь" class="santa-main">
   </header>
   
   <main>
@@ -164,44 +177,38 @@
         <h2 class="section-heading">Схема цен в соответствии с датами</h2>
         <ul class="prices-list">
           <li class="prices-item">
-            <p class="price">1900 &#8381</p>
-            <p class="date">до 26 декабря</p>
+            <p class="price">от 1500 &#8381</p>
+            <p class="date">до 30 декабря</p>
           </li>
           <li class="prices-item">
-            <p class="price">2500 &#8381</p>
-            <p class="date">26-27 декабря</p>
-          </li>
-          <li class="prices-item">
-            <p class="price">3100 &#8381</p>
-            <p class="date">28-29 декабря</p>
-          </li>
-          <li class="prices-item">
-            <p class="price">3800 &#8381</p>
+            <p class="price">2800 &#8381</p>
             <p class="date">30 декабря</p>
           </li>
           <li class="prices-item">
-            <p class="price">4500 &#8381</p>
+            <p class="price">3400 &#8381</p>
             <p class="date">31 декабря до 14:00</p>
           </li>
           <li class="prices-item">
-            <p class="price">5000 &#8381</p>
-            <p class="date">31 декабря c 15:00 до 19:00</p>
+            <p class="price">4000 &#8381</p>
+            <p class="date">31 декабря c 15:00 до 20:00</p>
           </li>
           <li class="prices-item">
-            <p class="price">6000 &#8381</p>
-            <p class="date">31 декабря c 19:00 до 23:00</p>
+            <p class="price">4600 &#8381</p>
+            <p class="date">31 декабря c 20:00 до 23:30</p>
           </li>
           <li class="prices-item">
             <p class="price">7000 &#8381</p>
-            <p class="date">31 декабря c 23:00 до 01:00</p>
+            <p class="date">31 декабря c 23:30 до 00:00</p>
+          </li>
+          <li class="prices-item">
+            <p class="price">3400 &#8381</p>
+            <p class="date">1 января</p>
           </li>
         </ul>
       </div>
-      <!-- <img src="img/toy-gold%20balls.png" alt="" class="prices-bgTop"> !-->
-      <img src="img/bag.png" alt="" class="prices-left">
       <a href="#" class="button-form">Узнать свободное время</a>
     </section>
-    <section class="gallery" id="photo">
+    <!--<section class="gallery" id="photo">
       <h2 class="section-heading">Фотографии наших праздников</h2>
       <div class="wrapper-gallery">
         <section class="card">
@@ -223,7 +230,7 @@
         </section>
       </div>
       
-    </section>
+    </section> !-->
     <section class="guarantee">
       <div class="content-wrapper">
         <ul class="guarantee-list">
@@ -236,6 +243,63 @@
         </ul>
       </div>
     </section>
+    <div class="content-wrapper">
+      <section class="popup-section">
+        <div class="wrapper">
+        <h2 class="title">Лучшее предложение из всех</h2>
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos hic quia expedita delectus in, alias tempora animi, iure exercitationem sunt ducimus qui excepturi odio illo accusantium sit nihil. Ad, ex.</p>
+        <a href="#popUp" class="button-popup" id="Btn">Сделать заказ</a>
+        </div>
+        <div id="popUp" class="popUp popup_hide">
+        <div class="popUp-content">
+          <span class="close">&times;</span>
+          <p>Успей заказать! Только сегодня - скидка 15%!</p>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQSsKhyXkf9r71y2uRCyYeqnnv9TahXUA1VAw&usqp=CAU" alt="" class="popUp-img">
+          <form action="php/mail.php" class="call-back" method="POST">
+            <label> Ваше имя
+              <input type="text" name="username" reqired>
+            </label>
+            <label> Ваш телефон
+        <input type="text" name="usertel" reqired>
+      </label>
+            <label>Дата и время
+        <input type="text" name="message" reqired>
+      </label>
+            <input class="button-mail" type='submit' value='Забронировать'>
+          </form>
+        </div>
+      </div>
+      </section>
+      </div>
+    </div>
+  </main>
+  <footer class="footer-page">
+    <div class="footer-content">
+      <a class="footer-logo">
+      <img src="img/OK.png" width="84" height="75" alt="Логотип с надписью Мороз'OK">
+    </a>
+      <ul class="footer-list">
+      <li class="nav-item"><a href="#about" class="nav-link">О нас</a></li>
+      <li class="nav-item"><a href="#program" class="nav-link">Программа поздравления</a></li>
+      <li class="nav-item"><a href="#how-work" class="nav-link">Как мы работаем</a></li>
+      <li class="nav-item"><a href="#price" class="nav-link">Цены</a></li>
+      <li class="nav-item"><a href="#photo" class="nav-link">Фото</a></li>
+      <li class="nav-item"><a href="#reviews" class="nav-link">Отзывы</a></li>
+    </ul>
+      <div class="connect">
+        <div class="call">Скидка 10% при заказе на сайте!</div>
+        <p>+7(342)-252-22-00</p>
+        <p>+7(912)-780-71-43</p>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <p class="copyright">Copyright &copy;2020.Scanavik</p>
+    </div>
+  </footer>
+  </div>
+  <script src="js/popup.js"></script>
+</body>
+</html>
   </main>
 </body>
 </html>
