class flex for ul

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="about" id="about">
       <div class="content-wrapper">
         <h2 class="section-heading">Почему клиенты выбирают нас из года в год и рекомендуют своим друзьям?</h2>
-        <ul class="about-list">
+        <ul class="about-list flex">
           <li class="about-item">
             <img src="img/icon1.png" alt="">
             <div class="about-content">
@@ -126,7 +126,7 @@
     <section class="how" id="how-work">
       <div class="content-wrapper">
         <h2 class="section-heading">Почему клиенты выбирают нас из года в год и рекомендуют своим друзьям?</h2>
-        <ul class="about-list">
+        <ul class="about-list flex">
           <li class="about-item">
             <img src="img/icon1.png" alt="">
             <div class="about-content">
