Fixed header and footer.  Replaced fonts on site

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Дед Мороз и Снегуочка на дом в Перми. Ваш ребёнок прикоснётся к сказке! Дарите эмоции - они останутся с Вами навсегда. Подарок близким - личное видео-поздравления Деда Мороза! Цены от 1500 руб.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Spectral+SC:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Заказ Дед Мороза на Новый год</title>
+  <title>Заказ Деда Мороза на Новый год в Перми</title>
 </head>
 <body>
   <div class="page">
@@ -29,11 +33,12 @@
     <img src="img/header-bg4.jpg" width="1440" height="581" alt="Вид новогоднего города Пермь" class="main-poster">
     <div class="position-wrap">
       <div class="title-wrap">
+        <p class="header-tel">Звоните прямо </br> сейчас!</p>
         <p class="header-tel">252-22-00</p>
         <p class="header-tel">+7(912)-78-071-43</p>
         <p class="header-top">Новогоднее игровое представление</p>  
         <h1 class="header_title">Дед мороз и Снегурочка</h1>
-        <p class="header-top">с визитом на дом в Перми</p>
+        <p class="title-bottom">с визитом на дом в Перми</p>
         <a href="#" class="button-form">заказать представление</a>
         <p class="header-bottom"><b>Запишитесь заранее</b> на удобное время - успейте подарить вашему ребенку праздник!</p>  
       </div>
@@ -125,12 +130,12 @@
     </section>
     <section class="how" id="how-work">
       <div class="content-wrapper">
-        <h2 class="section-heading">Почему клиенты выбирают нас из года в год и рекомендуют своим друзьям?</h2>
+        <h2 class="section-heading">Как заказать?</h2>
         <ul class="about-list flex">
           <li class="about-item">
             <img src="img/icon1.png" alt="">
             <div class="about-content">
-              <strong>Выбираете свободную дату,</strong>
+              <strong>Определите дату и время,</strong>
               <p class="about-text">когда хотите пригласить Деда Мороза со Снегурочкой.</p>
             </div>
           </li>
@@ -138,7 +143,14 @@
             <img src="img/icon2.png" alt="">
             <div class="about-content">
               <strong>Важны детали!</strong>
-              <p class="about-text">Наш менеджер связывается с Вами и уточняет детали.</p>
+              <p class="about-text">Наш менеджер свяжется с Вами, чтобы уточнить детали.</p>
+              <p class="about-text">Что у Вас точно захочет узнать менеджер:</p>
+              <ul class="text-list">
+                <li class="text-item">какая дата и какое время Вас интересует;</li>
+                <li class="text-item">сколько детей будут ждать Деда Мороза;</li>
+                <li class="text-item">возраст ребёнка или детей, если их несколько;</li>
+                <li class="text-item">адрес, куда Вы хотите пригласить Деда Мороза;</li>
+              </ul>
             </div>
           </li>
           <li class="about-item">
@@ -174,7 +186,8 @@
     </section>
     <section class="prices" id="price">
       <div class="content-wrapper">
-        <h2 class="section-heading">Схема цен в соответствии с датами</h2>
+        <h2 class="section-heading">Цены зависят от даты и времени поздравления</h2>
+        <p class="prices-heading">Вы можете выбрать удобно для Вас время. Наш менеджер составит маршрут для Дедушки Мороза и Снегурочки с учётом обозначенных пожеланий. После чего, согласует итоговое время с Вами.</p>
         <ul class="prices-list">
           <li class="prices-item">
             <p class="price">от 1500 &#8381</p>
@@ -185,26 +198,31 @@
             <p class="date">30 декабря</p>
           </li>
           <li class="prices-item">
-            <p class="price">3400 &#8381</p>
+            <p class="price">3600 &#8381</p>
             <p class="date">31 декабря до 14:00</p>
           </li>
           <li class="prices-item">
-            <p class="price">4000 &#8381</p>
-            <p class="date">31 декабря c 15:00 до 20:00</p>
+            <p class="price">4200 &#8381</p>
+            <p class="date">31 декабря c 14:00 до 20:00</p>
           </li>
           <li class="prices-item">
-            <p class="price">4600 &#8381</p>
-            <p class="date">31 декабря c 20:00 до 23:30</p>
+            <p class="price">4800 &#8381</p>
+            <p class="date">31 декабря c 20:00 до 22:00</p>
           </li>
           <li class="prices-item">
             <p class="price">7000 &#8381</p>
-            <p class="date">31 декабря c 23:30 до 00:00</p>
+            <p class="date">31 декабря c 22:00 до 00:00</p>
           </li>
           <li class="prices-item">
-            <p class="price">3400 &#8381</p>
+            <p class="price">3600 &#8381</p>
             <p class="date">1 января</p>
           </li>
         </ul>
+        <p class="prices-heading">Успевайте забронировать нужную дату и время, ведь с каждым днём их становится меньше!</p>
+        <p class="prices-videoconnect">Мы знаем, что большое количество родителей хотели бы устроить сюрприз для своих детей и получить поздравление от Деда Мороза. Также мы понимаем, что из-за самоизоляции не все могут пригласить Деда Мороза к себе в гости. Мы хотим, чтобы поздравления от Деда Мороза получило как можно больше детишек! Поэтому для Вас также доступна запись на видео-поздравление Деда Мороза. Видеозвонок можно заказать для себя, а можно подарить племянникам, брату, сестре или друзьям!</p>
+        <p class="prices-videoconnect">Оставляйте заявку на видеозвонок в форме. Рядом с датой укажите слово *ВИДЕО* и мы свяжемся с Вами, чтобы обсудить детали.</p>
+        <p class="prices-videoconnect">Вы можете подарить видео-поздравление своим родным или друзьям <b>бесплатно!</b></p>
+        <p class="prices-videoconnect">Для этого просто оформите заказ Деда Мороза на дом до 10 декабря и выберете кого хотите поздравить! И перед самым Новым годом Ваши близкие почувствуют Вашу заботу и тепло!</p>
       </div>
       <a href="#" class="button-form">Узнать свободное время</a>
     </section>
@@ -283,11 +301,11 @@
       <li class="nav-item"><a href="#program" class="nav-link">Программа поздравления</a></li>
       <li class="nav-item"><a href="#how-work" class="nav-link">Как мы работаем</a></li>
       <li class="nav-item"><a href="#price" class="nav-link">Цены</a></li>
-      <li class="nav-item"><a href="#photo" class="nav-link">Фото</a></li>
-      <li class="nav-item"><a href="#reviews" class="nav-link">Отзывы</a></li>
+      <!-- <li class="nav-item"><a href="#photo" class="nav-link">Фото</a></li>
+      <li class="nav-item"><a href="#reviews" class="nav-link">Отзывы</a></li> !-->
     </ul>
       <div class="connect">
-        <div class="call">Скидка 10% при заказе на сайте!</div>
+        <div class="call">Скидка 5% при заказе на сайте!</div>
         <p>+7(342)-252-22-00</p>
         <p>+7(912)-780-71-43</p>
       </div>
