header for 1100-1800px

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <title>Заказ Деда Мороза на Новый год в Перми</title>
 </head>
 <body>
-  <div class="page">
   <header class="page-header">
     <div class="content-wrapper">
       <a class="logo">
@@ -33,7 +32,7 @@
     <img src="img/header-bg4.jpg" width="1440" height="581" alt="Вид новогоднего города Пермь" class="main-poster">
     <div class="position-wrap">
       <div class="title-wrap">
-        <p class="header-tel">Звоните прямо </br> сейчас!</p>
+        <p class="header-tel">Звоните прямо <br> сейчас!</p>
         <p class="header-tel">252-22-00</p>
         <p class="header-tel">+7(912)-78-071-43</p>
         <p class="header-top">Новогоднее игровое представление</p>  
@@ -43,7 +42,7 @@
         <p class="header-bottom"><b>Запишитесь заранее</b> на удобное время - успейте подарить вашему ребенку праздник!</p>  
       </div>
     </div>
-    <img src="img/santa_claus_PNG9961.png" width="800" height="532" alt="Вид новогоднего города Пермь" class="santa-main">
+    <img src="img/santa_claus_PNG9961.png" width="800" height="532" alt="Дед Мороз с мешком подарков" class="santa-main">
   </header>
   
   <main>
@@ -289,7 +288,6 @@
       </div>
       </section>
       </div>
-    </div>
   </main>
   <footer class="footer-page">
     <div class="footer-content">
@@ -314,10 +312,6 @@
       <p class="copyright">Copyright &copy;2020.Scanavik</p>
     </div>
   </footer>
-  </div>
   <script src="js/popup.js"></script>
-</body>
-</html>
-  </main>
 </body>
 </html>
